--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "Shani757 <zeeshanhasnain785@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0"
   }
 }
